--- a/covid-19/scripts/widget.html
+++ b/covid-19/scripts/widget.html
@@ -5,7 +5,7 @@
 
 <body>
 	<div style="width:1000px;">
-		<script src="https://raw.githubusercontent.com/SailorMax/data/master/covid-19/scripts/widget/init.js"></script>
+		<script src="https://sailormax.github.io/data/covid-19/scripts/widget/init.js"></script>
 	</div>
 </body>
 </html>
